# Tractara

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  check_result.py  devcontainer.json  docker-compose.yml  dvc.yaml  mcp_server.py  params.yaml  pyproject.toml  start-swagger.bat
.ai-rules/: main.md
.ai-rules/claude/: overrides.md
.ai-rules/gemini/: overrides.md
.claude/skills/decision-logic/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh
.dvc/: config
.github/workflows/: ci-cd.yml
.tmp/: tmpb9bsqpwn  tmpllyn193d  tmpm55d_hm1
WorkingDeck/CLARA-SSoT/Baseline/: DOC_Baseline_Schema.xlsx
data/: DMC-S1000DBIKE-AAA-DA1-20-00-00AA-720A-A_001-00_EN-US.XML
docs/: ARCHITECTURE.md  DESIGN.md
scripts/: clean_data.py  sync_ai_rules.py
src/clara_ssot/: problem_details.py
src/clara_ssot/api/: main.py  pipeline.py
src/clara_ssot/curation/: term_curation_service.py
src/clara_ssot/landing/: landing_repository.py
src/clara_ssot/models/: term_types.py
src/clara_ssot/normalization/: doc_mapper.py  term_mapper.py
src/clara_ssot/parsing/: metadata_extractor.py  pdf_parser.py  section_classifier.py
src/clara_ssot/schemas/: DOC_baseline_schema.json  TERM_baseline_schema.json
src/clara_ssot/scripts/: ingest_bulk.py  prepare_data.py
src/clara_ssot/ssot/: term_ssot_repository.py
src/clara_ssot/validation/: term_validator.py
src/data/landing/docs/: DOC_09b05cd43b3a492680ac38e6b82b319d.json  DOC_0c31ab7ddb0c4e64b97ab224d7ca6d2f.json  DOC_0c32515b51f54353b5e0debf78f0730d.json  DOC_18e49e833ff64f81a93265373ed9982c.json  DOC_29c37c633a2b4e87b9fd9be379acc5c9.json  DOC_2d7297dadebc4b8a9bfc872bedac0dc9.doc.json  DOC_38db82f18a584319a6f377cb77d44186.json  DOC_83f0a6a3607d47a8bc4e29ec69509088.json  DOC_9e237cead3cd427ab7e3fcfcc1d8a56e.json  DOC_9fff191d65b84981b52e8cbe9e9351d8.json  DOC_a07f347e08c4405cbadc011c67f213a6.json  DOC_d3701cf846d547da9dc76d2156803ab1.json  DOC_f8ea4c31ec8541f2a0de4da30bae25af.doc.json
src/data/landing/terms/: C_AMP_b6850388-d163-4dc6-b1f8-d535cf54d17b.json  (+77 more)
src/tractara/api/: main.py  pipeline.py
src/tractara/catalogs/: _base.yaml  catalog_loader.py  jats.yaml  s1000d.yaml  transforms.py
src/tractara/normalization/: doc_mapper.py  term_mapper.py
src/tractara/parsing/: metadata_extractor.py  models.py  pdf_parser.py  xml_parser.py
src/tractara/schemas/: DOC_baseline_schema.json
src/tractara/scripts/: ingest_bulk.py
tests/: test_catalog_loader.py  test_doc_mapper.py  test_metadata_extractor.py  test_parsing_strategy.py  test_term_types.py  test_transforms.py  test_xml_parser.py
(+17 files in other folders)
