[tool.poetry]
name = "clara-ssot"
version = "0.1.0"
description = "Data-Centric AI Architecture for Highly Regulated Domains"
authors = ["Gi-Bum Lee <kizarik@seoultech.ac.kr>"]
readme = "README.md"
packages = [{include = "clara_ssot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
jsonschema = "^4.20.0"
python-multipart = "^0.0.6"
pymupdf = "^1.23.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
docling = "^2.71.0"
pdfplumber = "^0.11.9"
instructor = "^1.14.5"
anthropic = "^0.77.0"
google-generativeai = "^0.8.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.2"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
dvc = {extras = ["s3", "gdrive"], version = "^3.30.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q --cov=src/clara_ssot --cov-report=html --cov-report=term"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
